  encryption block size.

- Added check for too-small disks (most likely to be an issue when trying
  to use a too-small disk image); program now aborts if this happens.

- Added the ability to build sgdisk and cgdisk for Windows.

- Fixed build problems with recent versions of ncurses.

- Fixed bug that caused cgdisk to report incorrect partition attributes.

1.0.8 (6/9/2021):
-----------------

- Fixed double byte swap operation on writes of partition name data on
  big-endian systems; this is in addition to the double byte swap fix on
  reading partition label data fixed in 1.0.7. (Thanks to Erik Larsson for
  both fixes.)

- Added feature to gdisk and sgdisk to enable swapping the byte order of
  partition names, so as to correct disks already affected by the preceding
  bug. This option is 'b' on the experts' menu in gdisk and
  -b/--byte-swap-name in sgdisk. This seems advanced/obscure enough that I
  don't want to clutter cgdisk's menu with this option, so I haven't added
  it there.

- Added type code for the Barebox boot loader (0xbb00;
  4778ED65-BF42-45FA-9C5B-287A1DC4AAB1).

- Trivial code cleanup.

1.0.7 (3/10/2021):
------------------

- Fixed bug that caused spurious warnings about the partition table
  header claiming an invalid size of partition entries when reading
  some MBR disks.

- Added ARM64 as an architecture for the Mac builds of gdisk and fixparts.
  The official GPT fdisk binaries of these files for macOS are now
  "universal" x86-64/ARM64 binaries, so they will run natively on the new M1
  (ARM64) Macs. The sgdisk and cgdisk binaries, though, remain built only
  for x86-64, because they rely on libraries that are not easily built in
  "universal" form.

- Fixed double byte swap operation on partition label data on big-endian
  CPUs. This resulted in partition names becoming gibberish on such CPUs.

- Added three new type codes:
  - 0x0701 - Microsoft Storage Replica
  - 0x0702 - ArcaOS Type 1